Fix spacing for responsiveness

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
+    padding: 0 1.75rem;
     background-image: url('./assets/img/background-pattern-desktop.svg');
     background-repeat: no-repeat;
     background-color: hsl(275, 100%, 97%);
@@ -21,8 +22,8 @@ body {
 
 .card {
     background-color: hsl(0, 0%, 100%);
-    width: 20rem;
     padding: 1.5rem 1.5rem 0;
+    max-width: 34rem;
     border-radius: 0.5rem;
 }
 
@@ -30,6 +31,10 @@ header {
     display: flex;
     align-items: center;
     gap: 1.5rem;
+}
+
+h1 {
+    color: hsl(292, 42%, 14%);
 }
 
 header img {
@@ -40,6 +45,7 @@ header img {
 h2 {
     font-size: 1.05rem;
     font-weight: 600;
+    color: hsl(292, 42%, 14%);
 }
 
 button {
@@ -83,4 +89,18 @@ a {
 .question-header:hover {
     color: purple;
     cursor: pointer;
+}
+
+@media screen and (min-width: 1020px) {
+    .card {
+        padding: 2.5rem 2.5rem 1rem;
+    }
+    
+    h1 {
+        font-size: 50px;
+    }
+
+    header img {
+        width: 2rem;
+    }
 }
